# cuesheet

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
crates/cuesheet-cli/: Cargo.toml
crates/cuesheet-cli/src/: main.rs
crates/cuesheet-core/: Cargo.toml
crates/cuesheet-core/src/: error.rs  lib.rs  model.rs  parse.rs  ports.rs  sheet.rs  sqlite.rs  template.rs
crates/cuesheet-core/tests/: golden_test.rs  parse_test.rs
crates/cuesheet-core/tests/fixture/: mod.rs
crates/cuesheet-core/tests/golden/: standard.typ
crates/cuesheet-typst/: Cargo.toml
crates/cuesheet-typst/examples/: typst_to_pdf.rs
crates/cuesheet-typst/src/: lib.rs
crates/cuesheet-typst/tests/: pdf_smoke_test.rs
crates/cuesheet-wasm/: Cargo.toml
crates/cuesheet-wasm/src/: lib.rs
docs/: PLAN.md  RELEASING.md  signing-setup.typ
scripts/: make-icon.mjs
site/: index.html  package-lock.json  package.json  vite.config.ts
site/src/: downloads.ts  easterEgg.ts  main.ts  scene.ts  style.css  webapp.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src/lib/: machine.test.ts  machine.ts  tauri-deps.ts
