[workspace]
resolver = "2"
members = [
    "crates/cuesheet-core",
    "crates/cuesheet-typst",
    "crates/cuesheet-cli",
    "crates/cuesheet-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kindlyops/cuesheet"

[workspace.dependencies]
cuesheet-core = { path = "crates/cuesheet-core" }
cuesheet-typst = { path = "crates/cuesheet-typst" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
typst = "0.14"
typst-pdf = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }

[profile.release]
lto = true
codegen-units = 1
